	  information, avatar image, invite message.
	* The Change PIN option was moved into separate action.
	* New profile attributes added and shown.
	* Update to protocol v6.3.

	XMPP:
	* Remember the previously entered user directory when searching.
	  (Keith Moyer) (#12451)
	* Correctly handle a buddy's unsetting his/her vCard-based avatar.
	  (Matthew W.S. Bell) (#13370)

	Plugins:
	* The Voice/Video Settings plugin now includes the ability to test
	  microphone settings. (Jakub Adam) (#13182)
	* Fix a crash when handling some saved settings in the Voice/Video
	  Settings plugin. (Pat Erley) (13290, #13774)

	Windows-Specific Changes:
	* Fix building libpurple with Visual C++ .NET 2005. This was
	  accidentally broken in 2.7.11. (Florian Quèze)
	* Build internal libgadu using packed structs, fixing several
	  long-standing Gadu-Gadu issues. (#11958, #6297)

version 2.7.11 (03/10/2011):
	General:
	* Our bundled libgadu should now build on HP-UX.
	* Fix some instances of file transfers never completing. (Cristi Posoiu)
	  (#12472)

	Pidgin:
	* Sort by Status no longer causes buddies to move around when you
	  click them.
	* Fix embedding in the system tray on older GTK+ releases (such as on
	  CentOS 5.5 and older Fedora).
	* No longer require libstartup-notification for startup notification
	  support.  GTK+ has included support for years, so use it instead. (David
	  Benjamin) (#13245)

	AIM:
	* Fix a bug where some buddies from your buddy list might not show up.
	  Affected non-English ICQ users the most. (#13386)
	* Send keepalives for all types of network connections.  Will hopefully
	  make chat rooms more reliable. (#1449)

	MSN:
	* Fix bug that prevented added buddies to your buddy list in certain
	  circumstances.  (#13298)

	MXit:
	* MXit plugin and reported client version now follow the libpurple
	  version.
	* Don't try to request profile information for non-user contacts.
	* Allow Re-Invite for contacts in Deleted or Rejected state.